--- a/httpd.yml
+++ b/httpd.yml
@@ -9,6 +9,7 @@
   - name: Copying the demo file
     template: src=/etc/ansible/index.html.jinja2 dest=/var/www/html
               owner=apache group=apache mode=0644
+              remote_src=true
   - name: (Enable it on System Boot)
     service: name=httpd enabled=yes
     notify:
