--- a/apache1.yml
+++ b/apache1.yml
@@ -10,7 +10,7 @@
     yum: name=httpd state=absent
   - name: Copies template
     copy:
-       src: /etc/ansible/index.html.j2
+       src: /etc/ansible/index.html
        dest: /var/www/html
        owner: apache
        group: apache
