--- a/apache12.yaml
+++ b/apache12.yaml
@@ -1,14 +1,14 @@
 ---
 - hosts: all
-  remote_user: root
-  become: yes
+  #remote_user: root
+  #become: yes
  # become_method: su
 
   tasks:
   - name: Install Apache
     yum: pkg=httpd state=latest
   - name: Copying the demo file
-    template: src: /etc/ansible/index.html dest: /var/www/html 
+    template: src=/etc/ansible/index.html dest=/var/www/html 
               owner=apache group=apache mode=0644
   - name: Enable Apache on System Boot
     service: name=httpd enabled=yes
