--- a/apache12.yaml
+++ b/apache12.yaml
@@ -8,8 +8,10 @@
   - name: Install Apache
     yum: pkg=httpd state=latest
   - name: Copying the demo file
-    template: src=/etc/ansible/index.html dest=/var/www/html 
-              owner=apache group=apache mode=0644
+    template: 
+         src: /etc/ansible/index.html 
+         dest: /var/www/html 
+         owner=apache group=apache mode=0644
   - name: Enable Apache on System Boot
     service: name=httpd enabled=yes
 
