--- a/apache12.yaml
+++ b/apache12.yaml
@@ -11,7 +11,9 @@
     template: 
          src: /etc/ansible/index.html 
          dest: /var/www/html 
-         owner=apache group=apache mode=0644
+         owner: apache 
+         group: apache 
+         mode: 0644
   - name: Enable Apache on System Boot
     service: name=httpd enabled=yes
 
