--- a/apache12.yaml
+++ b/apache12.yaml
@@ -9,7 +9,7 @@
     yum: pkg=httpd state=latest
   - name: Copying the demo file
     copy:
-         src: /etc/ansible/index.html
+         src: /tmp/index.html
          dest: /var/www/html/
          owner: apache
          group: apache
